[package]
name = "sightingdb"
version = "0.0.4"
authors = ["Sebastien Tricaud <sebastien.tricaud@devo.com>"]
edition = "2018"

[[bin]]
name = "sightingdb"
path = "src/main.rs"

[dependencies]
dirs = "2.0.2"
rustyline = "5.0.0"

reqwest = "0.9.18"
daemonize = "0.4.1"

serde = "1.0.94"
serde_json = { version = "1.0.39", features = ["arbitrary_precision"] }

ansi_term = "0.9"
atomicwrites = "0.2.3"
#protobuf = "2.6.2"

rust-ini = "0.13.0"
log4rs = "0.13.0"
log = "0.4.11"
openssl = "0.10.23"
base64 = "0.10.1"
#memory-balloon = "0.1.0"
clap = "2.33.0"
qstring = "0.7.0"
anyhow = "1.0.34"

bincode = "*"
flate2 = "*"

[dependencies.chrono]
version = "0.4.7"
features = ["serde"]

[dependencies.actix-web]
version = "1.0.0"
features = ["ssl"]
